--- a/apps/bare-sandbox/ios/Podfile
+++ b/apps/bare-sandbox/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'devclient' do
+target 'bare-sandbox' do
   use_expo_modules!
 
   config = use_native_modules!
