--- a/apps/bare-sandbox/package.json
+++ b/apps/bare-sandbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-client",
+  "name": "bare-sandbox",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "expo": "~41.0.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
-    "expo-dev-client": "0.1.0",
+    "expo-dev-client": "~0.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.2",
